html css ok TODO -> better design

--- a/index.html
+++ b/index.html
@@ -25,15 +25,18 @@
 			
             <div id="meilleur_film"> 
 				<div class="title_cat"><h2>Film le mieux noté</h2></div>
-				<div id="best-movie">
-			        <div class="img"><img src="img/test.jpg"></div>
-					<div class="title"><h3>The revenant</h3></div>
+                <div id="container_best_movie">
+                    <div class="img"><img src="img/test.jpg">
+                    </div>
+				    <div class="title"><h3>The revenant</h3></div>
 				    <div class="description">
-                        <a>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</a>
+                        <a>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</a>
                     
                     </div>
-				    <div class="play"></div>
-				</div>
+			       	<div class="play"><img src="img/play.png"></div>
+			    	</div>
+                </div>
 			
             </div>
             
