--- a/index.html
+++ b/index.html
@@ -45,39 +45,39 @@
 			<div id="action">
 				<div class="title_cat"><h2>Action</h2></div>
                 <div id="carousel-action">
-                    <div class="items"><img src="img/test.jpg"></div>
-                    <div class="items"><img src="img/test2.jpg"></div>
-                    <div class="items"><img src="img/test3.jpg"></div>
-                    <div class="items"><img src="img/test4.jpg"></div>
-                    <div class="items"><img src="img/test.jpg"></div>
-                    <div class="items"><img src="img/test2.jpg"></div>
-                    <div class="items"><img src="img/test3.jpg"></div>
+                    <div class="items"><img id="image-action-1" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-action-2" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-action-3" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-action-4" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-action-5" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-action-6" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-action-7" src="img/test.jpg"></div>
                 </div>
 			</div>
 			
-			<div id="commedie">
+			<div id="drama">
 				<div class="title_cat"><h2>Commedie</h2></div>
-                <div id="carousel-commedie">
-                    <div class="items"><img src="img/test.jpg"></div>
-                    <div class="items"><img src="img/test2.jpg"></div>
-                    <div class="items"><img src="img/test3.jpg"></div>
-                    <div class="items"><img src="img/test4.jpg"></div>
-                    <div class="items"><img src="img/test.jpg"></div>
-                    <div class="items"><img src="img/test2.jpg"></div>
-                    <div class="items"><img src="img/test3.jpg"></div>
+                <div id="carousel-drama">
+                    <div class="items"><img id="image-drama-1" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-drama-2" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-drama-3" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-drama-4" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-drama-5" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-drama-6" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-drama-7" src="img/test.jpg"></div>
                 </div>
 			</div>
 			
-			<div id="dramatique">
+			<div id="animation">
 				<div class="title_cat"><h2>Dramatique</h2></div>
-                <div id="carousel-dramatique">
-                    <div class="items"><img src="img/test.jpg"></div>
-                    <div class="items"><img src="img/test2.jpg"></div>
-                    <div class="items"><img src="img/test3.jpg"></div>
-                    <div class="items"><img src="img/test4.jpg"></div>
-                    <div class="items"><img src="img/test.jpg"></div>
-                    <div class="items"><img src="img/test2.jpg"></div>
-                    <div class="items"><img src="img/test3.jpg"></div>
+                <div id="carousel-animation">
+                    <div class="items"><img id="image-animation-1" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-animation-2" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-animation-3" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-animation-4" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-animation-5" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-animation-6" src="img/test.jpg"></div>
+                    <div class="items"><img id="image-animation-7" src="img/test.jpg"></div>
                 </div>
 			</div>
            
@@ -89,6 +89,7 @@
     </body>
 </html>
 <script src="js/carousel.js" async></script>
+<script src="js/fetch.js" async></script>
 
 
 
