Todo => setAttribut modal.js

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</a>
                     
                     </div>
-			       	<div class="play"><img src="img/play.png"></div>
+			       	<div class="play"><img class="img_movie" src="img/play.png"></div>
 			    	</div>
                 </div>
 			
@@ -46,51 +46,51 @@
 			<div id="action">
 				<div class="title_cat"><h2>Action</h2></div>
                 <div id="carousel-action">
-                    <div class="items"><img id="image-action-1" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-action-2" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-action-3" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-action-4" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-action-5" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-action-6" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-action-7" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-action-1" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-action-2" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-action-3" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-action-4" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-action-5" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-action-6" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-action-7" src="img/test.jpg"></div>
                 </div>
 			</div>
 			
 			<div id="drama">
 				<div class="title_cat"><h2>Commedie</h2></div>
                 <div id="carousel-drama">
-                    <div class="items"><img id="image-drama-1" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-drama-2" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-drama-3" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-drama-4" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-drama-5" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-drama-6" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-drama-7" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-drama-1" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-drama-2" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-drama-3" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-drama-4" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-drama-5" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-drama-6" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-drama-7" src="img/test.jpg"></div>
                 </div>
 			</div>
 			
 			<div id="animation">
 				<div class="title_cat"><h2>Dramatique</h2></div>
                 <div id="carousel-animation">
-                    <div class="items"><img id="image-animation-1" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-animation-2" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-animation-3" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-animation-4" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-animation-5" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-animation-6" src="img/test.jpg"></div>
-                    <div class="items"><img id="image-animation-7" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-animation-1" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-animation-2" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-animation-3" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-animation-4" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-animation-5" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-animation-6" src="img/test.jpg"></div>
+                    <div class="items"><img class="img_movie" id="image-animation-7" src="img/test.jpg"></div>
                 </div>
 			</div>
         </section>
     </body>
-    <div id="modal">
+    <div id="modal" style="display: none;">
         <div>
             <div id="modal-wrapper">
                 <div id="modal_title">
                     <h2>TEST</h2>
-                    <div id="modal_close"><img src="img/close.png"></div>
                 </div>
-                <div id="modal_img"><img src="img/test.jpg""></div>
+                <div id="modal_close"><img id="close"src="img/close.png"></div>
+                <div id="modal_img"><img id="modale_img2" src="img/test.jpg""></div>
                 <div id="modal_description">
                      <a id ="description_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
                      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</a>
