--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/carousel.css" />
-    <link rel="stylesheet" href="css/modal.css" />
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/carousel.css">
+    <link rel="stylesheet" href="css/modal.css">
     <title>JustStreamIt</title>
 </head>
 
@@ -27,51 +27,49 @@
         <div id="best_movie"> 
             <h2 id="best_movie_section">Film le mieux noté</h2>
             <div id="best_movie_container">
-                <img id="best_movie_img">
-                <h3 id="best_movie_title"></h3>                 
-                <img id="best_movie_play" src="img/play.png">
+                <img id="best_movie_img" src="img/img_not_available.png" alt="image">
+                <h3 id="best_movie_title">Title</h3>                 
+                <img id="best_movie_play" src="img/play.png" alt="image">
             </div>
         </div>
-
-
 
 
         <div id="action">
             <div class="title_cat"><h2>Action</h2></div>
             <div id="carousel-action">
-                <div class="items"><img class="img_movie" id="image-action-1"></div>
-                <div class="items"><img class="img_movie" id="image-action-2"></div>
-                <div class="items"><img class="img_movie" id="image-action-3"></div>
-                <div class="items"><img class="img_movie" id="image-action-4"></div>
-                <div class="items"><img class="img_movie" id="image-action-5"></div>
-                <div class="items"><img class="img_movie" id="image-action-6"></div>
-                <div class="items"><img class="img_movie" id="image-action-7"></div>
+                <div class="items"><img class="img_movie" id="image-action-1" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-action-2" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-action-3" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-action-4" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-action-5" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-action-6" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-action-7" src="img/img_not_available.png" alt="image"></div>
             </div>
         </div>
 
         <div id="drama">
             <div class="title_cat"><h2>Commedie</h2></div>
             <div id="carousel-drama">
-                <div class="items"><img class="img_movie" id="image-drama-1"></div>
-                <div class="items"><img class="img_movie" id="image-drama-2"></div>
-                <div class="items"><img class="img_movie" id="image-drama-3"></div>
-                <div class="items"><img class="img_movie" id="image-drama-4"></div>
-                <div class="items"><img class="img_movie" id="image-drama-5"></div>
-                <div class="items"><img class="img_movie" id="image-drama-6"></div>
-                <div class="items"><img class="img_movie" id="image-drama-7"></div>
+                <div class="items"><img class="img_movie" id="image-drama-1" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-drama-2" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-drama-3" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-drama-4" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-drama-5" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-drama-6" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-drama-7" src="img/img_not_available.png" alt="image"></div>
             </div>
         </div>
 
         <div id="animation">
             <div class="title_cat"><h2>Dramatique</h2></div>
             <div id="carousel-animation">
-                <div class="items"><img class="img_movie" id="image-animation-1"></div>
-                <div class="items"><img class="img_movie" id="image-animation-2"></div>
-                <div class="items"><img class="img_movie" id="image-animation-3"></div>
-                <div class="items"><img class="img_movie" id="image-animation-4"></div>
-                <div class="items"><img class="img_movie" id="image-animation-5"></div>
-                <div class="items"><img class="img_movie" id="image-animation-6"></div>
-                <div class="items"><img class="img_movie" id="image-animation-7"></div>
+                <div class="items"><img class="img_movie" id="image-animation-1" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-animation-2" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-animation-3" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-animation-4" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-animation-5" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-animation-6" src="img/img_not_available.png" alt="image"></div>
+                <div class="items"><img class="img_movie" id="image-animation-7" src="img/img_not_available.png" alt="image"></div>
             </div>
         </div>
     </section>
@@ -79,10 +77,10 @@
 
     <div id="modal">
         <div id="modal-wrapper">    
-            <img id="modal_close"src="img/close.png">   
+            <img id="modal_close" src="img/close.png" alt="image">   
 
 
-            <img id="modal_img" src="img/test.jpg">
+            <img id="modal_img" src="img/img_not_available.png" alt="image">
             <div id="modal_title"></div>
             <div id="content_information">
                 <p class="madal_litle_title">Genre: <span id="modal_genres"></span></p>
@@ -92,20 +90,19 @@
                 <p class="madal_litle_title">Réalisateur: <span id="modal_director"></span></p>
                 <p class="madal_litle_title">Acteurs: <span id="modal_actors"></span></p>
                 <p class="madal_litle_title">Durée: <span id="modal_duration"></span></p>
-                <p class="madal_litle_title">Pays d’origine: <span id="modal_contry"></p>
+                <p class="madal_litle_title">Pays d’origine: <span id="modal_contry"></span></p>
                 <p class="madal_litle_title">Résultat au Box Office: <span id="modal_resulat_box_office"></span></p>
                 <p class="madal_litle_title">Résumé: <span id="modal_abstract"></span></p> 
-            <div></div> 
-        
-
+            </div>
         </div>
     </div>    
-</body>
-</html>
-
 <script src="js/carousel.js" async></script>
 <script src="js/fetch.js" async></script>
 <script src="js/modal.js" async></script>
+</body>
+</html>
+
+
 
 
 
